[project]
name = "jiraone"
version = "v0.9.2"
authors = [
    { name="Prince Nyeche", email="support@elfapp.website" },
]
description = "A REST API Implementation to Jira Cloud APIs for creating reports and for performing other Jira queries."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.9"
dependencies = [
    "requests",
]
[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/princenyeche/jiraone"
Source = "https://github.com/princenyeche/jiraone"
Documentation = "https://jiraone.readthedocs.io/"
"Tracker" = "https://github.com/princenyeche/jiraone/issues"


[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinxcontrib-httpdomain",
    "jiraone",
    "sphinx-autoapi",
    "scipy",
    "numpy",
    "pandas",
    "matplotlib",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[build-system]
requires = [
    "setuptools>=78",
    "wheel"
]
build-backend = "setuptools.build_meta"
