[metadata]
name = jiraone
version = 0.5.1
author = Prince Nyeche
author_email = support@elfapp.website
description = A REST API implementation to Jira's API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/princenyeche/jiraone
project_urls =
    Bug Tracker = https://github.com/princenyeche/jiraone/issues
classifiers =
    Environment :: CLI Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    
[options.packages.find]
where = src
